aligned stats section and other minor fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body {
         border-radius: 0px;
     }
     .inner-responsive-page {
-        height: 90vh !important;
+        min-height: 90vh !important;
         scroll-margin: 80px;
     }
 }
@@ -58,7 +58,7 @@ body {
 }
 
 .inner-responsive-page {
-    height: var(--inner-responsive-page-height);
+    min-height: var(--inner-responsive-page-height);
     scroll-margin: 80px;
 }
 
@@ -311,19 +311,26 @@ body {
     display: flex;
     justify-content: space-around;
     color: #ece8e1;
+    
+    
+}
+.stat-icon{
+    margin-bottom: 10px;
 }
 
 .stat {
     font-size: 2.5vh;
-    padding: 1vh;
+    padding: 2rem;
     border: 2px ridge #fd4556;
     border-radius: 1rem;
     box-shadow: inset 0 0 10px #fd4556;
     display: inline;
     text-align: center;
-    height: 20vh;
     width: 30vh;
     text-shadow: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .stat:hover {
@@ -502,7 +509,8 @@ margin: auto;
 .accordion-button{
     color: white;
     background-color: #272727 !important;
-    /* background-color: var(--black-matt) !important; */
+    /* background-color: var(--black-matt) !important;
+     */
 
 
 }
@@ -602,7 +610,6 @@ margin: auto;
         box-shadow: inset 0 0 10px var(--red);
         display: flex;
         justify-content: space-evenly;
-        height: 10vh;
         width: 40vh;
         text-shadow: none;
     }
@@ -648,7 +655,7 @@ margin: auto;
         box-shadow: inset 0 0 10px var(--red);
         display: flex;
         justify-content: space-evenly;
-        height: 10vh;
+     
         width: 70vh;
         text-shadow: none;
         text-align: center;
